[gd_scene load_steps=4 format=3 uid="uid://b1v77u11c5crb"]

[ext_resource type="Theme" uid="uid://bbxmydfgv8ikb" path="res://theme.tres" id="1_76tmi"]
[ext_resource type="Texture2D" uid="uid://bkxkmd52j8wli" path="res://UI/Intro/splash2.png" id="2_eirrw"]
[ext_resource type="Script" path="res://UI/PlayMenu/PlayMenu.gd" id="2_yigka"]

[node name="PlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_76tmi")
script = ExtResource("2_yigka")

[node name="Splash" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_eirrw")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 483.0
offset_top = -190.0
offset_right = -483.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LocalButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Local"

[node name="LANButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "LAN"

[node name="WANButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Online"

[node name="BackLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Press escape or B to go back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/LocalButton" to="." method="_on_local_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LANButton" to="." method="_on_lan_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/WANButton" to="." method="_on_wan_button_pressed"]
